# llm-process-automation-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RUNBOOK.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  logging_utils.py  main.py  openai_client.py  prompts.py  schemas.py  service.py  storage.py
evaluation/: golden_set.json  results.json  run_evaluation.py
tests/: test_extract.py  test_extract_live.py  test_health.py  test_schema.py  test_service.py
